--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,44 @@
-.client-container {
-    background-color: rgba(195, 242, 242, 0.597);
-    width: 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
 
-    
+.main-container {
+  display: flex;
+  justify-content: center;
 }
 
-.client-container .client {
-    display: flex;
-    flex-direction: column;
+.content-container {
+  width: 70%;
+  margin-top: 50px;
+  background-color: #F8EDE3;
+  height: 500px;
+}
+
+.header-container {
+  width: 70%;
+  background-color: #F8EDE3;
+  height: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.left-side-btn {
+  display: flex;
+  width: 30%;
+  height: 100%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.header-container a {
+  width: 90px;
+  height: 100%;
+  color: #7D6E83;
+  text-decoration: unset;
+  font-family: serif;
+  font-weight: bold;
+  font-size: 22px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
