added new buttons and ui fixes

--- a/src/app/home/client/client.component.html
+++ b/src/app/home/client/client.component.html
@@ -65,6 +65,7 @@
     <div class="footer-btn-container">
       <button [disabled]="isCreateDisabled" (click)="createClient()">Create</button>
       <button (click)="updateClient()">Update</button>
+      <button (click)="deleteClient()">Delete</button>
     </div>
   </div>
 </div>
