--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -51,7 +51,9 @@
         </mat-form-field>
       </div>
     </div>
-    <button (click)="createVisit()">Create Visit</button>
+    <div class="create-btn-block">
+      <button (click)="createVisit()">Create Visit</button>
+    </div>
   </div>
 </div>
   
