--- a/src/app/home/employer/employers.component.html
+++ b/src/app/home/employer/employers.component.html
@@ -47,6 +47,7 @@
     <div class="footer-btn-container">
       <button [disabled]="isCreateDisabled" (click)="createEmployer()">Create</button>
       <button (click)="updateEmployer()">Update</button>
+      <button (click)="deleteEmployer()">Delete</button>
     </div>
   </div>
 </div>
